emergency touch fixes
iphone was "suddenly" broken -- a viewport setting to prevent zooming
was fixing it at crazy-huge scale. As I fixed it I noticed problems with
fixed-scroll keys. iPhone was setting the height too short in landscape,
and wasn't scrolling it! (once I got it to scroll, the rest of the time
it didn't work)

--- a/css/style_app.css
+++ b/css/style_app.css
@@ -281,7 +281,7 @@ section#left_bar {
 	width: 220px; /* added 20px to allow for scrollbar */
 	/* background-color: #000; */
 	z-index: 10;
-	height: 700px;
+	height: 1500px;
 	overflow: auto;
 }
 ul#dynamic_car_display {
